# serverless

./: .gitignore  .pre-commit-config.yaml  README.md  all_branch_delete.sh  pyproject.toml  pyprojext.toml  renovate.json  test.py
.github/: pr_conversation.md
.github/workflows/: monitor_waf_deploy.yml  s3_conversion.yaml
algo/big_o/: main.py
algo/que/: que.js  que.py
algo/search/: binary.py  main.py  node.py
algo/sort/: bogo.py  bubble.py  cocktail.py  comb.py
algo/stack/: format.py  stack.py
algo/two_sum/: two_sum.py  two_sum_self.py
cdk/ec2/: .gitignore  app.py  func.py  network.py  network_stack.py  requirements.txt
ecs-deploy/: README.md  package-lock.json  package.json  serverless.ts
fl/: README.md  pyproject.toml  rest.http
fl/app/: app.py
fl/app/models/: database.py  models.py  onegai.db
fl/app/templates/: index.html  newcomer.html  top.html
flask/app/: app.py
json/: rest.json  rest.zsh
local/aws/: README.md  get_obj_gen.py  requirements.txt
local/date_module/: main.py
local/github/: main.py  org_id.py  private_key.pem
paiza/d/: main.py
read/sanmoku/: main.py  test.py
sam/: test_2024_05_04.yaml
sam/api_gateway_handson/: README.md  samconfig.toml
sam/daily-cost-notify/: Pipfile  README.md  samconfig.toml  template.yaml  test.py
sam/daily_const_notify/: samconfig.toml  template.yaml
sam/hello-test/: README.md  samconfig.toml  template.yaml
sam/lambda-python3.9/: template.yaml
sam/monitor-ecs-capacity-provider/: README.md  samconfig.toml  template.yaml
sam/monitor-waf/: README.md  (+2 more)
tutorial/: class.py  pyvenv.cfg
(+418 files in other folders)
