[tool.poetry]
name = "fl"
version = "0.1.0"
description = ""
authors = ["takehiro1111 <t.soccer.0916@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "2.3.3"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
